<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@mipmap/hinhnen"
    tools:context=".SingupActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginLeft="5dp"
        android:layout_marginRight="5dp"
        android:layout_marginBottom="10dp"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5dp"
            android:layout_marginTop="20dp"
            android:layout_marginRight="5dp"
            android:layout_marginBottom="20dp"
            android:fontFamily="@font/nunito"
            android:gravity="center"
            android:text="@string/name_regi"
            android:textColor="#ff00"
            android:textSize="35dp"
            android:textStyle="bold"></TextView>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="30dp"
                android:layout_margin="5dp"
                android:text="@string/tv_name"
                android:textStyle="bold"
                android:drawablePadding="10dp"
                android:textSize="25dp"></TextView>

            <EditText
                android:id="@+id/txtBussName"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginTop="5dp"
                android:layout_marginLeft="30dp"
                android:layout_marginRight="15dp"
                android:layout_marginBottom="10dp"
                android:textSize="20dp"
                android:background="@color/white">
            </EditText>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="30dp"
                android:layout_margin="5dp"
                android:text="@string/tv_address"
                android:textStyle="bold"
                android:drawablePadding="10dp"
                android:textSize="25dp"></TextView>

            <EditText
                android:id="@+id/txtBussAddress"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginTop="5dp"
                android:layout_marginLeft="30dp"
                android:layout_marginRight="15dp"
                android:layout_marginBottom="10dp"
                android:textSize="20dp"
                android:background="@color/white">
            </EditText>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="30dp"
                android:layout_margin="5dp"
                android:text="@string/email"
                android:textStyle="bold"
                android:drawablePadding="10dp"
                android:textSize="25dp"></TextView>

            <EditText
                android:id="@+id/txtEmail"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginTop="5dp"
                android:layout_marginLeft="30dp"
                android:layout_marginRight="15dp"
                android:layout_marginBottom="10dp"
                android:textSize="20dp"
                android:background="@color/white">
            </EditText>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="30dp"
                android:layout_margin="5dp"
                android:text="@string/pass"
                android:textStyle="bold"
                android:drawablePadding="10dp"
                android:textSize="25dp"></TextView>

            <EditText
                android:id="@+id/txtmatkhau"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginTop="5dp"
                android:layout_marginLeft="30dp"
                android:layout_marginRight="15dp"
                android:layout_marginBottom="10dp"
                android:textSize="20dp"
                android:background="@color/white">
            </EditText>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="30dp"
                android:layout_margin="5dp"
                android:text="@string/tax"
                android:textStyle="bold"
                android:drawablePadding="10dp"
                android:textSize="25dp"></TextView>

            <EditText
                android:id="@+id/txtTax"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginTop="5dp"
                android:layout_marginLeft="30dp"
                android:layout_marginRight="15dp"
                android:layout_marginBottom="10dp"
                android:textSize="20dp"
                android:background="@color/white">
            </EditText>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="30dp"
                android:layout_margin="5dp"
                android:text="@string/phone"
                android:textStyle="bold"
                android:drawablePadding="10dp"
                android:textSize="25dp"></TextView>

            <EditText
                android:id="@+id/txtPhone"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:textSize="20dp"
                android:layout_marginTop="5dp"
                android:layout_marginLeft="30dp"
                android:layout_marginRight="15dp"
                android:layout_marginBottom="30dp"
                android:background="@color/white">
            </EditText>
        </LinearLayout>

        <Button
            android:id="@+id/btnRegister"
            android:layout_width="300dp"
            android:layout_height="60dp"
            android:layout_gravity="center"
            android:text="@string/res"
            android:textSize="25dp"
            android:textStyle="bold"></Button>
    </LinearLayout>
</ScrollView>